Fix popover transparency. Fix dark mode font color for Exif values.

--- a/src/styles/dark_mode.scss
+++ b/src/styles/dark_mode.scss
@@ -1,6 +1,6 @@
 // "The dark theme baseline palette" from
 // https://material.io/design/color/dark-theme.html
-$primary-color: rgb(79, 0, 43);
+$primary-color: #BB86FC;
 $primary-variant-color: #3700B3;
 $secondary-color: #03DAC6;
 $background-color: #121212;
@@ -50,8 +50,10 @@ body.dark-mode {
 		}
 
 		td {
-			& > *:not(.popover) {
+			& > span {
 				opacity: $text-high-emphasis-opacity;
+			}
+			& > span:not(.popover) {
 				font-weight: lighter;
 			}
 		}
